assets/styles/panels.css
#grapes {
  display: grid;
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  grid-template-areas:
    "nav-bar nav-bar nav-bar"
    "layout-panel top-bar component-panel"
    "layout-panel editor component-panel"
    "layout-panel bottom-bar credit";
  grid-template-columns: var(--gjs-left-width) 1fr var(--gjs-left-width);
  grid-template-rows: var(--nav-height) var(--gjs-canvas-top) auto var(--gjs-canvas-top);
  height: 100%;
  width: 100%;

  .gjs-pn-buttons {
    gap: var(--gjs-gap);
  }

  .gjs-sm-preview-file {
    display: none;
  }

  .gjs-pn-btn {
    background-color: var(--gjs-components-background);
    width: 100%;
    margin: 0;
    align-items: center;
    padding: var(--gjs-gap);
    box-shadow: var(--gjs-shadow-large);
    border-radius: var(--gjs-border-radius);
    border: var(--gjs-border);
    white-space: nowrap;
    max-width: unset;
    display: flex;

    &.inline {
      svg {
        height: 1.1rem;
        stroke-width: 2px;
      }
    }

    &.no-shadow {
      box-shadow: none;
      border: none;
    }

    &.call-to-action {
      background: var(--inetum-green);
      color: #ffffff;

      &:hover {
        color: #ffffff;
      }
    }

    &.gjs-pn-active {
      box-shadow: none;
    }

    &:hover {
      color: var(--inetum-orange);
    }
  }

  .gjs-sm-sector {
    margin-bottom: 24px;
  }

  .gjs-sm-sector-title,
  .gjs-title,
  .gjs-label {
    font-size: var(--font-size-small);
    font-weight: 500 !important;
    margin: 0;
    padding: 0;
    pointer-events: none;

    .gjs-sm-sector-caret,
    .gjs-caret-icon {
      display: none !important;
    }
  }

  #editor {
    grid-area: editor;
  }

  #nav-bar {
    grid-area: nav-bar;
    padding: var(--gjs-gap) calc(2 * var(--gjs-gap));
    background-color: var(--gjs-components-background);
    border-bottom: var(--gjs-border);
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  #top-bar {
    grid-area: top-bar;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 100%;
    gap: var(--gjs-gap);
    justify-content: space-between;
    background-color: var(--gjs-canvas-background);
    padding: 0 80px;
    z-index: 1;

    .gjs-pn-panel {
      all: unset;
      display: flex;
      align-items: center;
      justify-content: center;

      &:first-child {
        justify-content: flex-start;
      }

      &:last-child {
        justify-content: flex-end;
      }
    }

    .gjs-pn-panel {
      display: flex;
      align-items: center;
      justify-content: center;

      .gjs-pn-buttons {
        box-shadow: var(--gjs-shadow-large);
        border-radius: var(--gjs-border-radius);
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 1px;
        background-color: var(--gjs-border-color);
        border: var(--gjs-border);
        overflow: hidden;

        .gjs-pn-btn {
          border-radius: 0;
          border: none;
        }
      }
    }
  }

  #credit {
    grid-area: credit;
    text-align: center;
    background-color: var(--gjs-components-background);
    z-index: 1;
    font-size: var(--font-size-small);
    display: flex;
    align-items: center;
    color: color-mix(in srgb, currentColor, transparent 50%);
    transition: 0.2s;
    justify-content: center;

    &:hover {
      color: currentColor;
      transition: 0.2s;
    }
  }

  #bottom-bar {
    grid-area: bottom-bar;
    display: grid;
    grid-template-columns: min-content min-content;
    padding: 0 var(--gjs-gap);
    grid-template-rows: 100%;
    justify-content: space-between;
    gap: var(--gjs-gap);
    background-color: var(--gjs-components-background);
    z-index: 1;
    border-top: var(--gjs-border);
    border-left: var(--gjs-border);
    border-right: var(--gjs-border);

    .gjs-pn-panel {
      all: unset;
      display: flex;
      align-items: center;
      justify-content: center;
    }

    .gjs-pn-panel {
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }

  .gjs-sm-btn-c {
    border-radius: var(--gjs-border-radius);
  }

  .gjs-sm-btn {
    background-color: var(--gjs-components-background);
    width: 100%;
    margin: 0;
    padding: 8px;
    border-radius: inherit;
    border: none !important;

    &.gjs-pn-active {
      box-shadow: none;
    }

    &:hover {
      color: var(--inetum-orange);
    }
  }
  .gjs-blocks-c {
    display: grid;
    gap: 16px;
    grid-template-columns: repeat(3, 1fr);
    padding: calc(2 * var(--gjs-gap));

    .gjs-block {
      align-items: center;
      display: flex;
      justify-content: center;
      margin: 0;
      min-height: 0;
      padding: 2px;
      width: 100%;
      aspect-ratio: 1;
      border: var(--gjs-border);
      border-radius: var(--gjs-border-radius);
      box-shadow: var(--gjs-shadow-large);

      &:hover {
        box-shadow: var(--gjs-shadow-large);
      }

      .gjs-block__media {
        width: 32px;
        margin-bottom: 4px;
      }

      .gjs-block-label {
        font-family: inherit;
        font-size: inherit;
        font-weight: normal;
      }
    }
  }

  #layout-panel {
    grid-area: layout-panel;
  }

  #component-panel {
    grid-area: component-panel;
  }

  #component-panel,
  #layout-panel {
    background-color: var(--gjs-components-background);
    width: 100%;
    height: 100%;
    position: relative;
    scrollbar-gutter: stable both-edges;
    max-height: 100%;
    overflow: auto;
    box-shadow: var(--gjs-shadow-large);
  }

  #layers-panel {
    .gjs-layer-item {
      padding: 4px 0;
      border: none;
      font-size: var(--font-size-small);

      &:hover .gjs-layer-name {
        color: var(--inetum-green);
      }
    }
  }

  .gjs-field {
    border-radius: var(--gjs-border-radius);
    border: var(--gjs-border);
    box-shadow: var(--gjs-shadow-small);
    background-color: transparent;
  }

  .gjs-sm-label {
    font-weight: normal;
    margin: var(--gjs-gap) 0;
  }

  .gjs-sm-properties {
    font-size: var(--font-size-small);
    padding: 2px 3px;
  }

  .gjs-sm-field.gjs-sm-composite,
  .gjs-sm-composite.gjs-clm-select,
  .gjs-sm-composite.gjs-clm-field {
    background-color: transparent;
    border-radius: 8px;
    border: var(--gjs-border);
  }
  input,
  button,
  select,
  option {
    font-size: var(--font-size-small);
    font-family: inherit;
    color: inherit;
  }

  .gjs-field.gjs-field-color {
    display: flex;
    overflow: hidden;
  }

  .gjs-field-color-picker {
    background-color: transparent;
  }

  .gjs-input-holder {
    width: 100%;
    flex: 1;
  }

  .gjs-radio-item {
    font-weight: normal;
    border-color: var(--gjs-border-color);

    input:checked + .gjs-radio-item-label {
      background-color: var(--gjs-selected-background);
    }

    &:hover {
      color: var(--inetum-orange);
      background: unset;
    }
  }

  .gjs-field-colorp {
    border-color: var(--gjs-border-color);
    padding: 0;
    overflow: hidden;
    width: auto;
    position: relative;
    aspect-ratio: 1;
  }

  .gjs-radio-item input:checked + .gjs-radio-item-label {
    color: var(--inetum-green);
  }
}

#export-menu {
  background-color: var(--gjs-border-color);
  border-radius: var(--gjs-border-radius);
  border: var(--gjs-border);
  box-shadow: var(--gjs-shadow-large);
  display: flex;
  flex-direction: column;
  gap: 1px;
  margin: 0;
  padding: 0;
  width: fit-content;
  position: absolute;
  right: calc(var(--gjs-left-width) + var(--gjs-gap));
  left: auto;
  bottom: calc(var(--gjs-canvas-top) - 1.5 * var(--gjs-gap));
  top: auto;

  .button {
    background-color: var(--gjs-components-background);
    align-items: center;
    padding: var(--gjs-gap);
    border: none;
    box-shadow: none;
    color: var(--color);
    cursor: pointer;
    display: flex;
    font-family: inherit;
    outline: none;
    gap: 4px;
    width: 100%;

    svg {
      height: 1.1rem;
    }

    &:hover,
    &:focus-visible {
      color: var(--inetum-green);
    }

    &.invalid {
      border: 1px solid var(--inetum-orange);
      color: var(--inetum-orange);

      &:hover,
      &:focus-visible {
        color: white;
        background-color: var(--inetum-orange);
      }
    }
  }
}

.gjs-field-checkbox input:checked + .gjs-chk-icon {
  border-color: var(--inetum-green);
}

